--- a/assets/css/big-canvas.css
+++ b/assets/css/big-canvas.css
@@ -12,6 +12,12 @@
   filter:alpha(opacity=60);
 }
 
+#overlay {
+	width: 100%;
+	height: 100%;
+	z-index: 2;
+}
+
 #instructions {
 	margin: auto;
 	position: absolute;
@@ -24,6 +30,7 @@
  	width:  1000px;
   height: 1000px;
 	position: absolute;
+	z-index: -1;
 }
 .sketchpad {
 }
