--- a/assets/css/big-canvas.css
+++ b/assets/css/big-canvas.css
@@ -3,27 +3,14 @@
 	position: relative;
 	margin: auto;
 }
-#instruction-container {
-	width: 100%;
-	height: 100%;
-	background-color:black;
-  opacity:0.6;
-  position: absolute;
-  filter:alpha(opacity=60);
-}
 
 #overlay {
 	width: 100%;
 	height: 100%;
 	z-index: 2;
 }
-
-#instructions {
-	margin: auto;
-	position: absolute;
-	width: 200px;
-	height: 200px;
-	background-color: white;
+#logo {
+	font-size: 22px;
 }
 
 .canvas-container {
@@ -59,6 +46,14 @@ html, body {
 	display: inline;
 	margin-right: 5px;
 	float: right;
+}
+
+.instructions:hover span {
+	display: none;
+}
+
+.instructions:hover:before {
+	content: "right-click + drag to move, ctrl to erase";
 }
 
 #menu-options {
