--- a/assets/css/big-canvas.css
+++ b/assets/css/big-canvas.css
@@ -19,6 +19,14 @@
 	position: absolute;
 	z-index: -1;
 }
+
+.mouse-container {
+	width: 18px;
+	height: 18px;
+	position: absolute;
+	background-image: url('https://s3.amazonaws.com/big-canvas/assets/images/glyph-pencil.png');
+	z-index: 5;
+}
 .sketchpad {
 }
 
@@ -56,7 +64,7 @@ html, body {
 }
 
 .instructions:hover:after {
-	content: "right-click + drag = move, ctrl = erase, alt = eyedropper";
+	content: "right-click + drag to move, ctrl for previous color, alt to eyedropper";
 }
 
 #menu-options {
